--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
-  <meta http-equiv="refresh" content="0; URL=https://cydia4kurd.github.io/cydia" />
+  <meta http-equiv="refresh" content="0; URL=https://cydia4kurd.github.io/ahmad_AL_kurdi/cydia" />
 </head>
 <body>
-  <p>If you are not redirected in a seconds, <a href="https://cydia4kurd.github.io/cydia">click here</a>.</p>
+  <p>If you are not redirected in a seconds, <a href="https://cydia4kurd.github.io/ahmad_AL_kurdi/cydia">click here</a>.</p>
 </body>
