--- a/depiction/web/com.alkurdi.frame.html
+++ b/depiction/web/com.alkurdi.frame.html
@@ -14,7 +14,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="iPadBar13">
     <meta name="twitter:description" content="Frame hack by Ahmed AL Kurdi iOS 11.0 to 15.0.">
-    <meta name="twitter:image" content="https://cydia4kud.github.io/assets/com.alkurdi.frame/banner.png">
+    <meta name="twitter:image" content="https://cydia4kud.github.io/ahmad_AL_kurdi/assets/com.alkurdi.frame/banner.png">
     <meta name="theme-color" content="#2ED4B5">
 </head>
 <body>
