--- a/depiction/web/com.alkurdi.frame.html
+++ b/depiction/web/com.alkurdi.frame.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Frame hack by Ahmed AL Kurdi iOS 11.0 to 15.0.">
     <meta property="og:image" content="../../assets/com.alkurdi.frame/banner.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="iPadBar13">
+    <meta name="twitter:title" content="Frame hack">
     <meta name="twitter:description" content="Frame hack by Ahmed AL Kurdi iOS 11.0 to 15.0.">
     <meta name="twitter:image" content="https://cydia4kud.github.io/ahmad_AL_kurdi/assets/com.alkurdi.frame/banner.png">
     <meta name="theme-color" content="#2ED4B5">
