--- a/index.html
+++ b/index.html
@@ -193,14 +193,27 @@ window.a2a_config=window.a2a_config||{};a2a_config.callbacks=[];a2a_config.overl
 					<div class="elementor-social-icons-wrapper elementor-grid">
 							<div class="elementor-grid-item">
 					<a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-4a8f7ba" href="https://twitter.com/Ahmadsorannn" target="_blank">
-						<span class="elementor-screen-only">Twitter</span>
+						<span class="elementor-screen-only">Twitter</span>1
 						<i class="fab fa-twitter"></i>					</a>
 				</div>
+
 							<div class="elementor-grid-item">
 					<a class="elementor-icon elementor-social-icon elementor-social-icon-instagram elementor-repeater-item-40db2c8" href="https://www.instagram.com/ahmad.soran01/" target="_blank">
-						<span class="elementor-screen-only">Instagram</span>
+						<span class="elementor-screen-only">Instagram</span>1
 						<i class="fab fa-instagram"></i>					</a>
 				</div>
+<div class="elementor-grid-item">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-youtube elementor-repeater-item-40db2c8" href="https://www.instagram.com/cydia_kurd_source/" target="_blank">
+						<span class="elementor-screen-only">Instagram</span>2
+						<i class="fab fa-instagram"></i>		</a> 
+				</div>
+
+<div class="elementor-grid-item">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-github elementor-repeater-item-40db2c8" href="https://twitter.com/cydia_kurd" target="_blank">
+						<span class="elementor-screen-only">Instagram</span>2
+						<i class="fab fa-twitter"></i>		</a> 
+				</div>
+
 					</div>
 				</div>
 				</div>
