--- a/index.html
+++ b/index.html
@@ -173,8 +173,11 @@ window.a2a_config=window.a2a_config||{};a2a_config.callbacks=[];a2a_config.overl
 				</div>
 					</div>
 		</div>
+
 							</div>
 		</section>
+<center>
+<a href="https://info.flagcounter.com/Owfp"><img src="https://s04.flagcounter.com/count/Owfp/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a></center>
 				<section class="elementor-section elementor-top-section elementor-element elementor-element-d48fe87 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="d48fe87" data-element_type="section">
 							<div class="elementor-background-overlay"></div>
 							<div class="elementor-container elementor-column-gap-default">
@@ -203,13 +206,13 @@ window.a2a_config=window.a2a_config||{};a2a_config.callbacks=[];a2a_config.overl
 						<i class="fab fa-instagram"></i>					</a>
 				</div>
 <div class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-youtube elementor-repeater-item-40db2c8" href="https://www.instagram.com/cydia_kurd_source/" target="_blank">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-youtube elementor-repeater-item-40db2c8" href="https://www.instagram.com/0x_alkurdi_x0/" target="_blank">
 						<span class="elementor-screen-only">Instagram</span>2
 						<i class="fab fa-instagram"></i>		</a> 
 				</div>
 
 <div class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-github elementor-repeater-item-40db2c8" href="https://twitter.com/cydia_kurd" target="_blank">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-github elementor-repeater-item-40db2c8" href="https://twitter.com/x_alkurdi_x" target="_blank">
 						<span class="elementor-screen-only">Instagram</span>2
 						<i class="fab fa-twitter"></i>		</a> 
 				</div>
