--- a/404.html
+++ b/404.html
@@ -63,6 +63,12 @@
 <a class="links" href="zbra://sources/add/https://cydia4kurd.github.io/ahmad_AL_kurdi/">Zebra</a>
 <a class="links" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://cydia4kurd.github.io/ahmad_AL_kurdi/">Cydia</a>
 <a class="links" href="sileo://source/https://cydia4kurd.github.io/ahmad_AL_kurdi/">Sileo</a>
+<a class="links" href="https://instagram.com/0x_alkurdi_x0"> Repo insta</a>
+<a class="links" href="https://instagram.com/ahmad.soran01"> Personal insta</a>
+<a class="links" href="https://www.facebook.com/105614574553422">FB Page</a>
+<a class="links" href="https://twitter.com/ahmadsorannn?s=21">Personal Twitter</a>
+<a class="links" href="https://twitter.com/x_alkurdi_x">Repo Twitter</a> 
+<a class="links" href="https://www.facebook.com/groups/500318494314245/">FB Group</a>
 </div>
 </div>
 <script>
