--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 <div class="dropdown-menu">
 <button class="menu-btn">Add source</button>
 <div class="menu-content">
-<a class="links" href="zbra://sources/add/https://cydia4kurd.github.io/Ahmed_AL_Kurdi/">Add TO Zebra</a>
-<a class="links" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://cydia4kurd.github.io/Ahmed_AL_Kurdi/">Add TO Cydia</a>
-<a class="links" href="sileo://source/https://cydia4kurd.github.io/Ahmed_AL_Kurdi/">Add TO Sileo</a>
+<a class="links" href="zbra://sources/add/https://cydia4kurd.github.io/ahmad_AL_kurdi/">Add TO Zebra</a>
+<a class="links" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://cydia4kurd.github.io/ahmad_AL_kurdi/">Add TO Cydia</a>
+<a class="links" href="sileo://source/https://cydia4kurd.github.io/ahmad_AL_kurdi/">Add TO Sileo</a>
 <a class="links" href="https://instagram.com/0x_alkurdi_x0"> Repo insta</a>
 <a class="links" href="https://instagram.com/ahmad.soran01"> Personal insta</a>
 <a class="links" href="https://www.facebook.com/105614574553422">FB Page</a>
