--- a/index.html
+++ b/index.html
@@ -160,7 +160,16 @@ dropdownBtn.addEventListener('click',()=>{
                         </div>
                     </div>
                 </a>
-                <a class="subtle_link" href="depiction/web/com.alkurdi.frame.html">
+                <a class="subtle_link" href="depiction/web/com.alkurdi.vivacuthack.html">
+                    <div class="package">
+                        <img src="assets/com.alkurdi.vivacuthack/icon.png">
+                        <div class="package_info">
+                            <p class="package_name">VivaCut Hack 2021</p>
+                            <p class="package_caption">Alkurdi </p>
+                        </div>
+                    </div>
+                </a>
+<a class="subtle_link" href="depiction/web/com.alkurdi.frame.html">
                     <div class="package">
                         <img src="assets/com.alkurdi.frame/icon.png">
                         <div class="package_info">
