--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ahmed ALKurdi Repo</title>
     <link rel="stylesheet" type="text/css" href="web/index.css">
     <style>a, .tint {color: #2ED4B5} .active {color: #2ED4B5</style>
+<meta name="google-site-verification" content="6ML5vW3rufClqccEKf0VTzX62kWYOuTcbvD5hY9ZSgs" />
     <meta name="description" content="we make simple tweaks">
     <meta property="og:title" content="Ahmed ALKurdi Repo">
     <meta property="og:description" content="we make simple tweaks">
