--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ dropdownBtn.addEventListener('click',()=>{
 <body>
     
 
+
       <div class="scroll_view">
             <a href="depiction/web/com.alkurdi.videostarhack.html" style="background-image: url(assets/com.alkurdi.videostarhack/banner.png)" class="card">
                 <p>VideoStarHack2021</p>
@@ -214,7 +215,7 @@ dropdownBtn.addEventListener('click',()=>{
                         </div>
                     </div>
                 </a>
-<center><h1> Tweaked App  </h1></center><p>&#160</p>
+        <h2 class="header">Tweaked App</h2>
 <a class="subtle_link" href="depiction/web/com.alkurdi.shahid.html">
                     <div class="package">
                         <img src="assets/com.alkurdi.shahid/icon.png">
