--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ dropdownBtn.addEventListener('click',()=>{
                 <p>Focos Hack 2021</p>
             </a>
         </div>
-        <h2 class="header">Packages</h2>
+        <h2 class="header">Tweaks</h2>
         <div class="packageList">
                 <a class="subtle_link" href="depiction/web/com.alkurdi.focos.html">
                     <div class="package">
