--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@ dropdownBtn.addEventListener('click',()=>{
       <div class="scroll_view">
             <a href="depiction/web/com.alkurdi.videostarhack.html" style="background-image: url(assets/com.alkurdi.videostarhack/banner.png)" class="card">
                 <p>VideoStarHack2021</p>
-            </a><a href="depiction/web/com.alkurdi.videostarhack.html" style="background-image: url(assets/com.alkurdi.videostarhack/banner.png)" class="card">
-                <p>CuteCut Hack 2021</p>
-            </a><a href="depiction/web/com.alkurdi.cutecuthack.html" style="background-image: url(assets/com.alkurdi.cutecuthack/banner.png)" class="card">
+            </a><a href="depiction/web/com.alkurdi.focos.html" style="background-image: url(assets/com.alkurdi.focos/banner.png)" class="card">
                 <p>Focos Hack 2021</p>
+            </a><a href="depiction/web/com.alkurdi.cutecuthack.html" style="background-image: url(assets/com.alkurdi.cutecuthack/banner.png)" class="card">
+                <p>Cutecut Hack 2021</p>
             </a>
         </div>
         <h2 class="header">Tweaks</h2>
