--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <img src="assets/com.alkurdi.focos/icon.png">
                     <div class="package_info">
                         <p class="package_name">Focos Hack 2021</p>
-                        <p class="package_caption">Alkurdi </p>
+                        <p class="package_caption">Tweak </p>
                     </div>
                 </div>
             </a>
@@ -89,7 +89,7 @@
                     <img src="assets/com.alkurdi.videostarhack/icon.png">
                     <div class="package_info">
                         <p class="package_name">Video Star Hack 2021</p>
-                        <p class="package_caption">Alkurdi </p>
+                        <p class="package_caption">Tweak </p>
                     </div>
                 </div>
             </a>
@@ -98,7 +98,7 @@
                     <img src="assets/com.alkurdi.cutecuthack/icon.png">
                     <div class="package_info">
                         <p class="package_name">CuteCut Hack 2021</p>
-                        <p class="package_caption">Alkurdi </p>
+                        <p class="package_caption">Tweak </p>
                     </div>
                 </div>
             </a>
@@ -107,7 +107,7 @@
                     <img src="assets/com.alkurdi.prefectvid/icon.png">
                     <div class="package_info">
                         <p class="package_name">Perfect-Video Hack 2021</p>
-                        <p class="package_caption">Alkurdi,</p>
+                        <p class="package_caption">Tweak,</p>
                     </div>
                 </div>
             </a>
@@ -116,7 +116,7 @@
                     <img src="assets/com.alkurdi.videoshophack/icon.png">
                     <div class="package_info">
                         <p class="package_name">VideoShop Hack 2021</p>
-                        <p class="package_caption">Alkurdi </p>
+                        <p class="package_caption">Tweak </p>
                     </div>
                 </div>
             </a>
@@ -125,7 +125,7 @@
                     <img src="assets/com.alkurdi.omletarcadepatch/icon.png">
                     <div class="package_info">
                         <p class="package_name">OmletArcade Hack 2021</p>
-                        <p class="package_caption">Alkurdi </p>
+                        <p class="package_caption">Tweak </p>
                     </div>
                 </div>
             </a>
@@ -134,7 +134,7 @@
                     <img src="assets/com.alkurdi.inshot/icon.png">
                     <div class="package_info">
                         <p class="package_name">InShot Hack 2021</p>
-                        <p class="package_caption">Alkurdi </p>
+                        <p class="package_caption">Tweak </p>
                     </div>
                 </div>
             </a>
@@ -143,7 +143,7 @@
                     <img src="assets/com.alkurdi.vivacuthack/icon.png">
                     <div class="package_info">
                         <p class="package_name">VivaCut Hack 2021</p>
-                        <p class="package_caption">Alkurdi </p>
+                        <p class="package_caption">Tweak </p>
                     </div>
                 </div>
             </a>
@@ -152,7 +152,7 @@
                     <img src="assets/com.alkurdi.frame/icon.png">
                     <div class="package_info">
                         <p class="package_name">Frames Hack 2021</p>
-                        <p class="package_caption">Alkurdi </p>
+                        <p class="package_caption">Tweak </p>
                     </div>
                 </div>
             </a>
@@ -161,7 +161,7 @@
                     <img src="assets/com.alkurdi.funmatehack/icon.png">
                     <div class="package_info">
                         <p class="package_name">Funimate Hack 2021</p>
-                        <p class="package_caption">Alkurdi </p>
+                        <p class="package_caption">Tweak </p>
                     </div>
                 </div>
             </a>
@@ -170,7 +170,7 @@
                     <img src="assets/com.alkurdi.artleaphack/icon.png">
                     <div class="package_info">
                         <p class="package_name">ArtLeap Hack 2021</p>
-                        <p class="package_caption">Alkurdi </p>
+                        <p class="package_caption">Tweak </p>
                     </div>
                 </div>
             </a>
@@ -179,7 +179,7 @@
                     <img src="assets/com.alkurdi.youcammakeup/icon.png">
                     <div class="package_info">
                         <p class="package_name">YouCam Makeup Hack 2021</p>
-                        <p class="package_caption">Alkurdi </p>
+                        <p class="package_caption">Tweak </p>
                     </div>
                 </div>
             </a>
@@ -188,7 +188,7 @@
                     <img src="assets/com.alkurdi.calmhack/icon.png">
                     <div class="package_info">
                         <p class="package_name">Calm Hack 2021</p>
-                        <p class="package_caption">Alkurdi </p>
+                        <p class="package_caption">Tweak </p>
                     </div>
                 </div>
             </a>
