--- a/depiction/web/com.alkurdi.shahid.html
+++ b/depiction/web/com.alkurdi.shahid.html
@@ -64,7 +64,7 @@ VIP active <a href="itms-services://?action=download-manifest&url=https://raw.gi
                 </div>
                 <div class="cell">
                     <div class="title">Section</div>
-                    <div class="text">Tweaks</div>
+                    <div class="text">Apps</div>
                     <br><br>
                 </div>
             </div>
