--- a/index.html
+++ b/index.html
@@ -211,6 +211,15 @@
                     </div>
                 </div>
             </a>
+            <a class="subtle_link" href="depiction/web/com.alkurdi.getover.html">
+                <div class="package">
+                    <img src="assets/com.alkurdi.getover/icon.png">
+                    <div class="package_info">
+                        <p class="package_name">Getting Over It Free</p>
+                        <p class="package_caption">APP </p>
+                    </div>
+                </div>
+            </a>
         </div>
         <center>
             <a href="https://info.flagcounter.com/Owfp"><img src="https://s04.flagcounter.com/count2/Owfp/bg_FFFFFF/txt_000000/border_FAFAFA/columns_3/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
