--- a/depiction/web/com.alkurdi.getover.html
+++ b/depiction/web/com.alkurdi.getover.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, user-scalable=0">
     <title>AirBrush Hack 2021</title>
     <link rel="stylesheet" type="text/css" href="../../web/index.css">
-    <style>a, .tint, .table-btn:after {color: #2ED4B5} .active {color: #2ED4B5;border-bottom: 2px solid #2ED4B5;}</style>
+    <style>
+        a,
+        .tint,
+        .table-btn:after {
+            color: #2ED4B5
+        }
+        
+        .active {
+            color: #2ED4B5;
+            border-bottom: 2px solid #2ED4B5;
+        }
+    </style>
     <script src="../../web/index.js"></script>
     <meta name="description" content="Getting Over It iOS 11.0 to 15.0.">
     <meta property="og:title" content="Getting Over It">
@@ -17,6 +29,7 @@
     <meta name="twitter:image" content="https://cydia4kud.github.io/ahmad_AL_kurdi/assets/com.alkurdi.getover/banner.png">
     <meta name="theme-color" content="#2ED4B5">
 </head>
+
 <body>
     <div class="body">
         <div style="background-image: url(../../assets/com.alkurdi.getover/banner.png)" class="banner_underlay"></div>
@@ -24,7 +37,8 @@
             <img src="../../assets/com.alkurdi.getover/icon.png">
             <div class="package_info">
                 <h1 class="package_name">Getting Over It</h1>
-                <p class="package_caption">Download For Free</p>
+                <p class="package_caption">Download For Free <button> <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/cydia4kurd/ahmad_AL_kurdi/master/ipa/getover.plist">Install</a></button></p>
+
             </div>
         </div>
         <div class="nav">
@@ -33,13 +47,15 @@
         </div>
         <div class="tweak_info">
             <p class="compatibility"><b>Compatibility:</b> This package is compatible with iOS iOS 11.0 to 15.0.</p>
-            <div class="scroll_view"><img class="img_card" src="../../assets/com.alkurdi.getover/screenshot/1.png"><img class="img_card" src="../../assets/com.alkurdi.getover/screenshot/2.png"><img class="img_card" src="../../assets/com.alkurdi.getover/screenshot/3.png"><img class="img_card" src="../../assets/com.alkurdi.getover/screenshot/4.png"><img class="img_card" src="../../assets/com.alkurdi.getover/screenshot/5.png"></div>
+            <div class="scroll_view"><img class="img_card" src="../../assets/com.alkurdi.getover/screenshot/1.png"><img class="img_card" src="../../assets/com.alkurdi.getover/screenshot/2.png"><img class="img_card" src="../../assets/com.alkurdi.getover/screenshot/3.png">
+                <img class="img_card" src="../../assets/com.alkurdi.getover/screenshot/4.png"><img class="img_card" src="../../assets/com.alkurdi.getover/screenshot/5.png"></div>
             <div class="md_view">
-                <p><h3>Features</h3>
-<ul>
-<li>Require jailbroken device</li>
-<li>Work with latest iOS Version</li>
-<li> Require Appsync tweak</li>
+                <p>
+                    <h3>Features</h3>
+                    <ul>
+                        <li>Require jailbroken device</li>
+                        <li>Work with latest iOS Version</li>
+                        <li> Require Appsync tweak</li>
             </div>
             <h3>Information</h3>
             <div class="table">
@@ -64,22 +80,28 @@
                     <br><br>
                 </div>
             </div>
-            
+
             </a>
         </div>
         <div class="changelog">
             <div class="changelog_entry">
                 <h4>1.13</h4>
-                <div class="md_view"><p>Updated: 23/6/2021</p>
-<ul>
-<li><p>no change made</p>
-</li>
-</ul>
-</div>
+                <div class="md_view">
+                    <p>Updated: 23/6/2021</p>
+                    <ul>
+                        <li>
+                            <p>no change made</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="caption center footer">2020 © Ahmed AL Kurdi</div>
     </div>
 </body>
-<script>compatible("11.0","15.0","iOS 11.0 to 15.0");externalize()</script>
+<script>
+    compatible("11.0", "15.0", "iOS 11.0 to 15.0");
+    externalize()
+</script>
+
 </html>
