--- a/depiction/web/com.alkurdi.getover.html
+++ b/depiction/web/com.alkurdi.getover.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, user-scalable=0">
-    <title>AirBrush Hack 2021</title>
+    <title>Getting over it free</title>
     <link rel="stylesheet" type="text/css" href="../../web/index.css">
     <style>
         a,
@@ -37,7 +37,7 @@
             <img src="../../assets/com.alkurdi.getover/icon.png">
             <div class="package_info">
                 <h1 class="package_name">Getting Over It</h1>
-                <p class="package_caption">Download For Free <button> <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/cydia4kurd/ahmad_AL_kurdi/master/ipa/getover.plist">Install</a></button></p>
+                <p class="package_caption">Download For Free <button> <a href="https://mega.nz/file/KoRSGLia#HFzUkey3qEaqVewm4JAv-dbX_ZRj70iE85PTkj6fMig">Download</a></button></p>
 
             </div>
         </div>
@@ -56,6 +56,15 @@
                         <li>Require jailbroken device</li>
                         <li>Work with latest iOS Version</li>
                         <li> Require Appsync tweak</li>
+                        <li>install IPA file using Filza file manager </li>
+                        <li>if you don't know how to install ipa manually please watch The tutorial</li>
+                        <div class="scroll_view"> <iframe class="img_card" src="https://www.youtube.com/embed/ar4tq_6HYPk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <p id="thetuttext">
+                                How to install any ipa using filza.
+                            </p>
+
+                        </div>
+
             </div>
             <h3>Information</h3>
             <div class="table">
@@ -76,7 +85,7 @@
                 </div>
                 <div class="cell">
                     <div class="title">Section</div>
-                    <div class="text">Apps</div>
+                    <div class="text">Hack & Paid Games</div>
                     <br><br>
                 </div>
             </div>
