--- a/depiction/web/com.alkurdi.shahid.html
+++ b/depiction/web/com.alkurdi.shahid.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, user-scalable=0">
     <title>Shahid VIP 2021</title>
     <link rel="stylesheet" type="text/css" href="../../web/index.css">
-    <style>a, .tint, .table-btn:after {color: #2ED4B5} .active {color: #2ED4B5;border-bottom: 2px solid #2ED4B5;}</style>
+    <style>
+        a,
+        .tint,
+        .table-btn:after {
+            color: #2ED4B5
+        }
+        
+        .active {
+            color: #2ED4B5;
+            border-bottom: 2px solid #2ED4B5;
+        }
+    </style>
     <script src="../../web/index.js"></script>
     <meta name="description" content="Shahid VIP iOS 11.0 to 15.0.">
     <meta property="og:title" content="Shahid VIP 2021">
@@ -17,6 +29,7 @@
     <meta name="twitter:image" content="https://cydia4kud.github.io/ahmad_AL_kurdi/assets/com.alkurdi.shahid/banner.png">
     <meta name="theme-color" content="#2ED4B5">
 </head>
+
 <body>
     <div class="body">
         <div style="background-image: url(../../assets/com.alkurdi.shahid/banner.png)" class="banner_underlay"></div>
@@ -26,7 +39,7 @@
                 <h1 class="package_name">Shahid VIP 2021</h1>
 
                 <p class="package_caption">
-VIP active <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/cydia4kurd/ahmad_AL_kurdi/master/ipa/shahid.plist">Install</a></p>
+                    VIP active <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/cydia4kurd/ahmad_AL_kurdi/master/ipa/shahid.plist">Install</a></p>
 
 
             </div>
@@ -37,13 +50,15 @@ VIP active <a href="itms-services://?action=download-manifest&url=https://raw.gi
         </div>
         <div class="tweak_info">
             <p class="compatibility"><b>Compatibility:</b> This package is compatible with iOS iOS 11.0 to 15.0.</p>
-            <div class="scroll_view"><img class="img_card" src="../../assets/com.alkurdi.shahid/screenshot/1.png"><img class="img_card" src="../../assets/com.alkurdi.shahid/screenshot/2.png"><img class="img_card" src="../../assets/com.alkurdi.shahid/screenshot/3.png"><img class="img_card" src="../../assets/com.alkurdi.shahid/screenshot/4.png"><img class="img_card" src="../../assets/com.alkurdi.shahid/screenshot/5.png"></div>
+            <div class="scroll_view"><img class="img_card" src="../../assets/com.alkurdi.shahid/screenshot/1.png"><img class="img_card" src="../../assets/com.alkurdi.shahid/screenshot/2.png"><img class="img_card" src="../../assets/com.alkurdi.shahid/screenshot/3.png"><img class="img_card"
+                    src="../../assets/com.alkurdi.shahid/screenshot/4.png"><img class="img_card" src="../../assets/com.alkurdi.shahid/screenshot/5.png"></div>
             <div class="md_view">
-                <p><h3>Features</h3>
-<ul>
-<li>Install Shahid VIP For free</li>
-<li>it takes some time when you open the app for the first time</li>
-<li>Don't forget to add our repo in cydia </li>
+                <p>
+                    <h3>Features</h3>
+                    <ul>
+                        <li>Install Shahid VIP For free</li>
+                        <li>it takes some time when you open the app for the first time</li>
+                        <li>Don't forget to add our repo in cydia </li>
             </div>
             <h3>Information</h3>
             <div class="table">
@@ -64,26 +79,32 @@ VIP active <a href="itms-services://?action=download-manifest&url=https://raw.gi
                 </div>
                 <div class="cell">
                     <div class="title">Section</div>
-                    <div class="text">Apps</div>
+                    <div class="text">Tweaked Apps</div>
                     <br><br>
                 </div>
             </div>
-            
+
             </a>
         </div>
         <div class="changelog">
             <div class="changelog_entry">
                 <h4>6.9.0</h4>
-                <div class="md_view"><p>Updated: 20/6/2021</p>
-<ul>
-<li><p>no change made</p>
-</li>
-</ul>
-</div>
+                <div class="md_view">
+                    <p>Updated: 20/6/2021</p>
+                    <ul>
+                        <li>
+                            <p>no change made</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="caption center footer">2020 © Ahmed AL Kurdi</div>
     </div>
 </body>
-<script>compatible("11.0","15.0","iOS 11.0 to 15.0");externalize()</script>
+<script>
+    compatible("11.0", "15.0", "iOS 11.0 to 15.0");
+    externalize()
+</script>
+
 </html>
