--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             color: #2ED4B5
     </style>
     <meta name="google-site-verification" content="6ML5vW3rufClqccEKf0VTzX62kWYOuTcbvD5hY9ZSgs" />
-    <meta name="description" content="we make simple tweaks">
+    <meta name="description" content="Welcome to Ahmed al kurdi repository make sure you're following us on social media to see updates | My name is Ahmed from kurdistan and i love appleOS and products">
     <meta property="og:title" content="Ahmed ALKurdi Repo">
-    <meta property="og:description" content="we make simple tweaks">
+    <meta property="og:description" content="Welcome to Ahmed al kurdi repository make sure you're following us on social media to see updates | My name is Ahmed from kurdistan and i love appleOS and products">
     <meta property="og:image" content="https://cydia4kurd.github.io/CydiaIcon.png">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Ahmed ALKurdi Repo">
