--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <meta name="theme-color" content="#2ED4B5">
 </head>
 <div class="body">
-    <center>
-        <h1 class="header">Ahmed AL Kurdi Repo</h1>
-    </center>
+
+    <h1 align="center" class="header">Ahmed AL Kurdi Repo</h1>
+
 
     <div class="dropdown-menu">
         <button class="menu-btn">Add source</button>
