--- a/depiction/web/com.alkurdi.getover.html
+++ b/depiction/web/com.alkurdi.getover.html
@@ -57,13 +57,14 @@
                         <li>Work with latest iOS Version</li>
                         <li> Require Appsync tweak</li>
                         <li>install IPA file using Filza file manager </li>
-                        <li>if you don't know how to install ipa manually please watch The tutorial</li>
-                        <div class="scroll_view"> <iframe class="img_card" src="https://www.youtube.com/embed/ar4tq_6HYPk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                            <p id="thetuttext">
-                                How to install any ipa using filza.
-                            </p>
+                        <li> <em class="tutone">if you don't know how to install ipa manually please watch The</em> <em class="thetuttexttwo">tutorial</em></li>
+                    </ul>
+                    <div class="scroll_view"> <iframe class="img_card" src="https://www.youtube.com/embed/ar4tq_6HYPk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p id="thetuttext">
+                            How to install any ipa using filza.
+                        </p>
 
-                        </div>
+                    </div>
 
             </div>
             <h3>Information</h3>
